--- a/main.css
+++ b/main.css
@@ -105,11 +105,13 @@ nav button {
     font-size: 20px;
     border-radius: 4px;
     font-weight: 400;
+    display: flex;
 }
 
 .btn-red-sm {
     background-color: red;
     color: white;
+    
 }
 
 .hero-buttons {
@@ -117,6 +119,7 @@ nav button {
     align-items: center;
     justify-content: center;
     gap: 16px;
+    
 }
 
 .main input {
@@ -126,6 +129,7 @@ nav button {
     border-radius: 4px;
     background-color: rgba(23, 23, 23, 0.7);
     border: 1px solid rgba(246, 238, 238, 0.5);
+    width: 350px;
 }
 
 .first {
@@ -227,7 +231,7 @@ footer .questions {
 
 @media screen and (max-width: 1300px) {
 
-    nav{
+    nav {
         max-width: 90vw;
     }
 
@@ -254,3 +258,51 @@ footer .questions {
     .hero> :nth-child(3) {
         font-size: 18px;
     }
+}
+    .hero-buttons {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 16px;
+    }
+
+    .faq h2 {
+        text-align: center;
+        font-size: 32px;
+    }
+
+    footer {
+        max-width: 90vw;
+        padding: 75px 0;
+    }
+
+    .footer-item{
+        align-items: center;
+    }
+ 
+
+
+
+
+
+@media screen and (max-width: 1300px) {
+
+    .footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 25px;
+    }
+}
+
+
+.footer a {
+    font-size: 14px;
+    color: white;
+}
+
+.footer-item {
+    display: flex;
+    flex-direction: column;
+    gap: 23px;
+}
